[gd_scene load_steps=7 format=2]

[ext_resource path="res://res/Gui/UiElements/Information_window.png" type="Texture" id=1]
[ext_resource path="res://ex/ico/bg/img_lct_01.webp" type="Texture" id=2]
[ext_resource path="res://res/Gui/UiElements/Main_Title_3.png" type="Texture" id=3]
[ext_resource path="res://res/Gui/UiElements/Little_shadow_d.png" type="Texture" id=4]
[ext_resource path="res://res/Gui/UiElements/BigSquare_Frame_v2.png" type="Texture" id=5]
[ext_resource path="res://tscn/map/loca/loca.gd" type="Script" id=6]

[node name="loca" type="Control"]
margin_right = 180.0
margin_bottom = 360.0
rect_min_size = Vector2( 162, 324 )
mouse_filter = 1
script = ExtResource( 6 )

[node name="k" type="NinePatchRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -69.5
margin_top = -120.0
margin_right = 69.5
margin_bottom = 120.0
rect_pivot_offset = Vector2( 60, 120 )
mouse_filter = 1
texture = ExtResource( 1 )
patch_margin_left = 34
patch_margin_top = 32
patch_margin_right = 39
patch_margin_bottom = 72

[node name="img" type="TextureRect" parent="k"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.0
margin_top = 11.0
margin_right = -2.0
margin_bottom = -6.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 7

[node name="NinePatchRect" type="NinePatchRect" parent="k"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_bottom = -5.0
texture = ExtResource( 5 )
patch_margin_left = 34
patch_margin_top = 50
patch_margin_right = 18
patch_margin_bottom = 31

[node name="tile" type="TextureRect" parent="k"]
anchor_right = 1.0
margin_left = -6.5
margin_top = -32.0
margin_right = 7.5
margin_bottom = 22.0
mouse_filter = 2
texture = ExtResource( 3 )
expand = true

[node name="Label" type="Label" parent="k/tile"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -57.5
margin_top = -5.0
margin_right = 57.5
margin_bottom = 17.0
text = "兵营"
align = 1
valign = 1

[node name="LittleShadow" type="TextureRect" parent="k/tile"]
show_behind_parent = true
margin_left = 8.0
margin_top = 62.0
margin_right = 50.0
margin_bottom = 199.0
rect_rotation = -90.0
texture = ExtResource( 4 )
expand = true

[node name="dec" type="NinePatchRect" parent="k"]
modulate = Color( 1, 1, 1, 0 )
self_modulate = Color( 1, 1, 1, 0.533333 )
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -62.5
margin_top = -74.0
margin_right = 63.5
margin_bottom = -16.0
texture = ExtResource( 4 )
patch_margin_left = 18
patch_margin_top = 19
patch_margin_right = 17
patch_margin_bottom = 18

[node name="txt" type="RichTextLabel" parent="k/dec"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 6.0
margin_top = 7.0
margin_right = -6.0
margin_bottom = -6.0
mouse_filter = 2
bbcode_enabled = true
bbcode_text = "获得装备后变强"
text = "获得装备后变强"

[node name="lvBox" type="VBoxContainer" parent="k"]
margin_left = 9.0
margin_top = 35.0
margin_right = 129.0
margin_bottom = 75.0
mouse_filter = 2

[node name="btn" type="TextureButton" parent="k"]
anchor_right = 1.0
anchor_bottom = 1.0

[connection signal="mouse_entered" from="k/btn" to="." method="_on_btn_mouse_entered"]
[connection signal="mouse_exited" from="k/btn" to="." method="_on_btn_mouse_exited"]
[connection signal="pressed" from="k/btn" to="." method="_on_TextureButton_pressed"]
